@@ -4,6 +4,7 @@ Release 0.9.7
 
 * reducing the number of templates for large number of channels, dynamically adapting cc_merge
 * speeding up the fitting procedure
+* enhancing the non-selection of noisy snippets, and thus clustering
 
 =============
 Release 0.9.6
